--- a/public/css/navar.css
+++ b/public/css/navar.css
@@ -194,3 +194,22 @@ body{
 .menu-collapsed .item{
     width: 100px;
 }
+
+/* Diseño de la tabla */
+table{
+    margin-left: 7px;
+    margin-right: 7px;
+}
+.encabezado{
+    margin-left: 500px;
+    margin-right: 12px;
+}
+
+/* formulario */
+.margin{
+    margin-left: 30px;
+    margin-right: 30px;
+}
+#botones{
+    text-align: center;
+}
